fix spacing

--- a/codeup-design.css
+++ b/codeup-design.css
@@ -6,12 +6,17 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+nav {
+    display: none;
+}
+
 body {
     font-family: 'Abel', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     height: 100vh;
     background: #F0F0F0;
 }
@@ -46,48 +51,6 @@ hr {
     /*color: #C1C1C1;*/
     opacity: .2;
 }
-
-/* EXTRA SMALL SCREEN*/
-@media screen and (max-width:500px) {
-
-
-}
-
-
-
-
-
-
-
-
-
-/**********SMALL MEDIA******/
-@media screen and (min-width:768px) {
-    body {
-        width: 768px;
-    }
-    nav {
-        display: flex;
-    }
-    nav ul {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-        grid-template-rows: 1fr 10px;
-        grid-gap: 1em;
-        align-items: center;
-        text-align: center;
-    }
-    .nav1 { grid-area: 1 / 1 / 2 / 2; }
-    .nav2 { grid-area: 1 / 2 / 2 / 3; }
-    .nav3 { grid-area: 1 / 3 / 2 / 4; }
-    .nav5 { grid-area: 1 / 4 / 2 / 5; }
-    .nav6 { grid-area: 1 / 5 / 2 / 6; }
-    .nav4 { grid-area: 2 / 1 / 3 / 6; }
-header {
-    text-align: center;
-    margin-top: 9em;
-    margin-bottom: 2em;
-}
 .circle {
     display: inline-block;
     border-radius: 50%;
@@ -99,6 +62,155 @@ header {
     color: white;
     font-family: 'Anton', sans-serif;
 }
+.red {
+    background: #e6563b;
+}
+.orange {
+    background: #e08d15;
+}
+.green {
+    background: #7cb06c;
+}
+.blue {
+    background: #00aba9;
+}
+
+img {
+    width: 100%;
+    height: auto;
+    border: .5em solid #E6E6E6;
+    border-radius: 1em;
+}
+.cir-d1{
+    background: #e6563b;
+    display: inline-block;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    font-family: 'Anton', sans-serif;
+    font-size: small;
+    margin-left: .5em;
+
+}
+
+.cir-d2{
+    background: #e08d15;
+    display: inline-block;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    font-family: 'Anton', sans-serif;
+    font-size: small;
+    margin-left: .5em;
+
+}
+.cir-s{
+    background: #7cb06c;
+    display: inline-block;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    font-family: 'Anton', sans-serif;
+    font-size: small;
+    margin-left: .5em;
+
+}
+.cir-h{
+    background: #00aba9;
+    display: inline-block;
+    border-radius: 50%;
+    width: 18px;
+    height: 18px;
+    text-align: center;
+    font-family: 'Anton', sans-serif;
+    font-size: small;
+    margin-left: .5em;
+    margin-right: .5em;
+
+}
+header {
+    text-align: center;
+}
+
+
+section ul {
+    display: flex;
+
+}
+
+section ul li:nth-child(1) {
+    margin-right: auto;
+}
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* EXTRA SMALL SCREEN*/
+@media screen and (max-width:500px) {
+
+
+
+    .box2, .box3, .box4, .feature4, .feature3, .feature2 {
+        display: none;
+    }
+
+    hr {
+        display: none;
+    }
+
+
+    .circle-design {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        grid-column-gap: 1em;
+        grid-row-gap: .5em;
+        width: 90%;
+
+    }
+
+    .red { grid-area: 1 / 1 / 2 / 2; }
+    .orange { grid-area: 1 / 2 / 2 / 3; }
+    .green { grid-area: 2 / 1 / 3 / 2; }
+    .blue { grid-area: 2 / 2 / 3 / 3; }
+
+}
+
+
+/**********SMALL MEDIA******/
+@media screen and (min-width:768px) {
+    body {
+        width: 768px;
+    }
+    /*nav {*/
+    /*    display: flex;*/
+    /*}*/
+    /*nav ul {*/
+    /*    display: grid;*/
+    /*    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;*/
+    /*    grid-template-rows: 1fr 10px;*/
+    /*    grid-gap: 1em;*/
+    /*    align-items: center;*/
+    /*    text-align: center;*/
+    /*}*/
+    /*.nav1 { grid-area: 1 / 1 / 2 / 2; }*/
+    /*.nav2 { grid-area: 1 / 2 / 2 / 3; }*/
+    /*.nav3 { grid-area: 1 / 3 / 2 / 4; }*/
+    /*.nav5 { grid-area: 1 / 4 / 2 / 5; }*/
+    /*.nav6 { grid-area: 1 / 5 / 2 / 6; }*/
+    /*.nav4 { grid-area: 2 / 1 / 3 / 6; }*/
+header {
+    text-align: center;
+    margin-top: 9em;
+    margin-bottom: 2em;
+}
+
 .red {
     background: #e6563b;
     grid-area: 1/1/2/2;
@@ -178,73 +290,6 @@ section {
     .feature4 {
         grid-area: 5 / 2 / 6 / 3;
     }
-
-
-    section ul {
-        display: flex;
-
-    }
-
-    section ul li:nth-child(1) {
-        margin-right: auto;
-    }
-    img {
-        width: 100%;
-        height: auto;
-        border: .5em solid #E6E6E6;
-        border-radius: 1em;
-    }
-    .cir-d1{
-        background: #e6563b;
-        display: inline-block;
-        border-radius: 50%;
-        width: 18px;
-        height: 18px;
-        text-align: center;
-        font-family: 'Anton', sans-serif;
-        font-size: small;
-        margin-left: .5em;
-
-    }
-
-    .cir-d2{
-        background: #e08d15;
-        display: inline-block;
-        border-radius: 50%;
-        width: 18px;
-        height: 18px;
-        text-align: center;
-        font-family: 'Anton', sans-serif;
-        font-size: small;
-        margin-left: .5em;
-
-    }
-    .cir-s{
-        background: #7cb06c;
-        display: inline-block;
-        border-radius: 50%;
-        width: 18px;
-        height: 18px;
-        text-align: center;
-        font-family: 'Anton', sans-serif;
-        font-size: small;
-        margin-left: .5em;
-
-    }
-    .cir-h{
-        background: #00aba9;
-        display: inline-block;
-        border-radius: 50%;
-        width: 18px;
-        height: 18px;
-        text-align: center;
-        font-family: 'Anton', sans-serif;
-        font-size: small;
-        margin-left: .5em;
-        margin-right: .5em;
-
-    }
-
 
 }
 
